--- a/otp.html
+++ b/otp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- this is an otp based door lock system whihc i made for my ece project in which i connected my esp32  to my web-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -178,4 +178,5 @@
         }
     </script>
 </body>
+
 </html>
